fixed footer alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,9 +8,15 @@
     min-height: 100vh;
 
     &__container {
+        flex: 1; 
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__content {
         background-color: $secondary-background-hover-color;
         height: 175px;
-    
+
         @include tablet {
             height: 185px;
         }
